--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
   "license": "CC-BY-3.0",
   "devDependencies": {
     "prettier": "^1.19.1"
+  },
+  "volta": {
+    "node": "20.11.0",
+    "npm": "10.4.0"
   }
 }
